Archive2/8e/ce2da5a1eddcc5/output
main.cpp: In function 'int main()':
main.cpp:6:28: error: 'command' is used uninitialized in this function [-Werror=uninitialized]
     printf("%p\n", command);
                            ^
cc1plus: all warnings being treated as errors
